fix: miscellaneous fixes